# stella-mcp

./: .gitignore  LICENSE  pyproject.toml
docs/brainstorms/: 2026-02-02-graph-based-auto-layout-brainstorm.md
docs/plans/: 2026-02-02-feat-better-element-positioning-plan.md  2026-02-02-feat-graph-based-auto-layout-plan.md  2026-02-02-fix-layout-algorithm-issues-plan.md
stella_mcp/: layout.py  server.py  xmile.py
tests/: test_positioning.py
